Resolves: tdf#90698 catch list (1;2) of non-references as error

Change-Id: Icc6f93bbf85df245ba332ce89791a1c8d266b1c6
Reviewed-on: https://gerrit.libreoffice.org/61639
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins